[package]
name = "drm-beatsaver-cacher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
beatsaver-api = { git = "https://github.com/mercurialworld/beatsaver-api", rev = "2896ab15756e19585bba55a045b4bc13a6cdf482" }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
flate2 = "1.1.5"
log = "0.4.29"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
prost-build = "0.14.1"
